# collab

./: .gitignore  Makefile  collab.cabal  cookies  package-lock.json  stack.yaml
client/: bower.json  index.html  room.html
client/src/: Main.purs  main.purs
client/src/Component/: IndexForm.purs  LoginForm.purs  RegistrationForm.purs
client/src/components/: LoginForm.purs
client/src/index/: IndexForm.purs  Main.purs
client/src/room/: Main.purs
client/test/: Main.purs
server/src/: API.hs  App.hs  AppWai.hs  Authentication.hs  Database.hs  Main.hs  Room.hs  Server.hs  Template.hs  Time.hs  Validation.hs
server/src/Html/: Index.hs
server/src/Object/: Account.hs  LoginForm.hs  Room.hs  User.hs
static/index/: index.html  main.js  style.css
static/index123/: main.js
static/index123/bootstrap/css/: bootstrap.css
static/register/: index.html  main.js  style.css
static/room/: index.html  main.js  styles.css
static/room/bootstrap/css/: bootstrap.css
static/room/codemirror/: package.json
static/room/codemirror/lib/: codemirror.css
templates/: index.html  invalid.mustache
templates/room/: index.mustache  notFound.mustache
