name:                collab
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/collab#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable collab-exe
  hs-source-dirs:      server/src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules: Server, API, Room, Template, Database, App, Time, AppWai
  build-depends:       base
                     , servant
                    , servant-server
                    , natural-transformation
                    , aeson-compat
                    , warp
                    , mustache
                    , transformers
                    , servant-blaze
                    , text
                    , postgresql-simple
                    , opaleye
                    , product-profunctors
                    , mtl
                    , time
                    , wai
                    , monad-logger
                    , tagged
  default-language:    Haskell2010

test-suite collab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
                    ,  server/src
  main-is:             Spec.hs
  build-depends:       base
                     , collab
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/collab
